--- a/instaclone/templates/all-upload/base.html
+++ b/instaclone/templates/all-upload/base.html
@@ -1,25 +1,33 @@
+{% load bootstrap3 %}
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    {% load staticfiles %}
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>instagram clone</title>
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+    {% if title %}
+    <title>IG- {{title}}</title>
+    {% else %}
+      <title>Unsplash</title>
+    {% endif %}
+
+    {% block styles %}
+      {% bootstrap_css %}
+      <link rel="stylesheet" href="{% static 'css/base.css' %}">
+      <br></br>
+      <br></br>
+    {% endblock %}
+
   </head>
-  <body class="{% block body_class_override %}{% endblock %}">
-    {% include 'navbar.html' %}
+  <body>
+  {% include "navbar.html" %}
+  <br></br>
+    {% block content %}
 
-    <div class="content-wrapper">
-        <div class="container">
-            {% block content %}
-            {% endblock %}
-        </div>
-    </div>
-
-
+    {% endblock %}
+    {% block scritps %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      {% bootstrap_javascript %}
+    {%endblock%}
   </body>
-
-
-
-</html>
